# Blockchain_mvp

./: .gitignore  README.md
.github/workflows/: go.yml   rust.yml
blockchain_core/: Cargo.toml
blockchain_core/src/: main.rs
blockchain_core/src/api/: handlers.rs  rpc.rs
blockchain_core/src/block/: block.rs  header.rs  mod.rs  validation.rs
blockchain_core/src/chain/: chain.rs  state.rs
blockchain_core/src/consensus/: mod.rs  pow.rs
blockchain_core/src/crypto/: hash.rs  key.rs  mod.rs  signature.rs
blockchain_core/src/network/: message.rs  mod.rs  peer.rs  protocol.rs
blockchain_core/src/storage/: db.rs  mod.rs  serialization.rs
blockchain_core/src/transaction/: mod.rs  transaction.rs  validation.rs
blockchain_tools/: .golangci.yml  Makefile  README.md  go.mod  go.sum
blockchain_tools/api/openapi/: APIDevelopmentGuide.md  blockchain.yaml
blockchain_tools/api/proto/: blockchain.proto
blockchain_tools/cmd/blockchain-api/: main.go
blockchain_tools/cmd/blockchain-cli/: main.go
blockchain_tools/examples/block-explorer/: main.go
blockchain_tools/examples/simple-wallet/: main.go
blockchain_tools/internal/api/: api.go
blockchain_tools/internal/api/handlers/: account.go  block.go  node.go  transaction.go
blockchain_tools/internal/api/middleware/: cors.go  logger.go
blockchain_tools/internal/api/swagger/: swagger.go
blockchain_tools/internal/cli/commands/: account.go  block.go  commands.go  node.go  test.go  transaction.go  version.go
blockchain_tools/internal/cli/config/: config.go
blockchain_tools/internal/cli/formatter/: json.go  (+3 more)
(+2 files in other folders)
