[package]
name = "blockchain_core"
version = "0.1.0"
edition = "2024"

[build-dependencies]
prost-build = "0.11"

[dependencies]
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }  # For serialization/deserialization
ring = "0.16"                                      # For cryptography
libp2p = "0.50"                                    # For P2P networking
tokio = { version = "1.0", features = ["full"] }   # For async runtime